# clinical_graphrag_study

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: b0_reference.example.json  base.yaml  gates.yaml
docs/: RUNBOOK.md
infra/guards/: pod_watch.py
infra/neo4j/: docker-compose.yml
infra/runpod/: down.sh  serve.sh  up.sh  with_pod.sh
manifest/: Experiment-Matrix.xlsx  __init__.py  lock.py  manifest.lock.json  manifest.py
mgr/: __init__.py  figures.py  ids.py  runner.py  smoke.py  state.py  sweep.py  sync_status.py
mgr/clients/: nim.py  nim_adapters.py  openai_compat.py  vllm.py
mgr/data/: convert_mirage.py  loader.py
mgr/eval/: answer_format_audit.py  b0_crosscheck.py
mgr/generate/: executor.py  extract.py  prompts.py
mgr/graph/: build.py  build_cli.py  neo4j_store.py  store.py  umls.py
mgr/metrics/: cost.py  generation.py  grounding_ragas.py  retrieval.py
mgr/rerank/: care_gate.py  cross_encoder.py
mgr/retrieval/: base.py  bm25.py  ca_rrf.py  dense.py  factory.py  fusion.py  graph_retriever.py  rrf.py
mgr/stats/: holm.py  (+5 more)
notebooks/: medgraphrag_kaggle.ipynb  medgraphrag_kaggle_poc.ipynb
scripts/: build_graph.sh  fetch_data.sh  replicate.sh  run_sweep.sh  smoke.sh
tests/: test_care.py  test_clients.py  test_convert_mirage.py  test_dense.py  test_executor.py  test_fusion.py  test_fusion_retriever.py  test_generation.py  test_graph.py  test_grounding.py  test_ids.py  test_manifest.py  test_nim_adapters.py  test_pod_watch.py  test_retrieval.py  test_retrieval_metrics.py  test_runner.py  test_smoke.py  test_state.py  test_stats.py  test_sweep.py  test_sync_b0_figures.py  test_umls.py
(+2 files in other folders)
