[project]
name = "medgraphrag-journal"
version = "0.0.1"
description = "Hybrid Graph-RAG for Medical QA — journal upgrade: runner, manifest, and stats harness."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Runtime-only services (installed on the pod): the NIM/vLLM HTTP clients are
# stdlib; these are for the graph DB and local serving.
serve = ["neo4j>=5.20", "vllm>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mgr", "manifest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py311"
